--- a/ToothFairy/TFCell.xib
+++ b/ToothFairy/TFCell.xib
@@ -12,6 +12,7 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
+			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUITableViewCell</string>
 		</array>
@@ -39,45 +40,93 @@
 						<reference key="NSNextResponder" ref="578420679"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="961596055">
+							<object class="IBUIImageView" id="261050609">
 								<reference key="NSNextResponder" ref="378987429"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 18}, {295, 21}}</string>
+								<string key="NSFrameSize">{264, 39}</string>
 								<reference key="NSSuperview" ref="378987429"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="461473281"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">cellBackground.png</string>
+								</object>
+							</object>
+							<object class="IBUIImageView" id="220110133">
+								<reference key="NSNextResponder" ref="378987429"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrame">{{219, 11}, {20, 20}}</string>
+								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">cellCheckmark.png</string>
+								</object>
+							</object>
+							<object class="IBUILabel" id="709173029">
+								<reference key="NSNextResponder" ref="378987429"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{20, 8}, {196, 34}}</string>
+								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="220110133"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">A horse is a horse</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">2</int>
-									<bytes key="NSRGB">MSAwLjYwMDAwMDAwODkgMAA</bytes>
+								<bool key="IBUIUsesAttributedText">YES</bool>
+								<object class="NSAttributedString" key="IBUIAttributedText">
+									<string key="NSString">Mississippi</string>
+									<dictionary key="NSAttributes">
+										<object class="NSColor" key="NSColor" id="209263236">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MQA</bytes>
+										</object>
+										<object class="NSFont" key="NSFont">
+											<string key="NSName">Helvetica-Bold</string>
+											<double key="NSSize">20</double>
+											<int key="NSfFlags">16</int>
+										</object>
+										<object class="NSMutableParagraphStyle" key="NSParagraphStyle">
+											<nil key="NSTabStops"/>
+										</object>
+									</dictionary>
 								</object>
-								<object class="NSColor" key="IBUIHighlightedColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
+								<reference key="IBUIHighlightedColor" ref="209263236"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">27</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">27</double>
-									<int key="NSfFlags">16</int>
-								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
+							<object class="IBUIImageView" id="461473281">
+								<reference key="NSNextResponder" ref="378987429"/>
+								<int key="NSvFlags">290</int>
+								<string key="NSFrame">{{0, 1}, {264, 4}}</string>
+								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="709173029"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">cellDots.png</string>
+								</object>
+							</object>
 						</array>
-						<string key="NSFrameSize">{327, 58}</string>
+						<string key="NSFrameSize">{264, 38}</string>
 						<reference key="NSSuperview" ref="578420679"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="961596055"/>
+						<reference key="NSNextKeyView" ref="261050609"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -90,7 +139,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{327, 59}</string>
+				<string key="NSFrameSize">{264, 39}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="378987429"/>
@@ -98,18 +147,34 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="378987429"/>
 				<string key="IBUIReuseIdentifier">TFCell</string>
-				<real value="59" key="IBUIRowHeight"/>
+				<real value="40" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">image</string>
+						<reference key="source" ref="578420679"/>
+						<reference key="destination" ref="220110133"/>
+					</object>
+					<int key="connectionID">23</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">label</string>
 						<reference key="source" ref="578420679"/>
-						<reference key="destination" ref="961596055"/>
+						<reference key="destination" ref="709173029"/>
 					</object>
-					<int key="connectionID">20</int>
+					<int key="connectionID">25</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">dots</string>
+						<reference key="source" ref="578420679"/>
+						<reference key="destination" ref="461473281"/>
+					</object>
+					<int key="connectionID">34</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -135,13 +200,31 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="578420679"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="961596055"/>
+							<reference ref="261050609"/>
+							<reference ref="709173029"/>
+							<reference ref="220110133"/>
+							<reference ref="461473281"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">19</int>
-						<reference key="object" ref="961596055"/>
+						<int key="objectID">21</int>
+						<reference key="object" ref="261050609"/>
+						<reference key="parent" ref="578420679"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">22</int>
+						<reference key="object" ref="220110133"/>
+						<reference key="parent" ref="578420679"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">24</int>
+						<reference key="object" ref="709173029"/>
+						<reference key="parent" ref="578420679"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">33</int>
+						<reference key="object" ref="461473281"/>
 						<reference key="parent" ref="578420679"/>
 					</object>
 				</array>
@@ -150,15 +233,18 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">TFCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">20</int>
+			<int key="maxID">34</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -166,10 +252,15 @@
 					<string key="className">TFCell</string>
 					<string key="superclassName">UITableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="dots">UIImageView</string>
 						<string key="image">UIImageView</string>
 						<string key="label">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="dots">
+							<string key="name">dots</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="image">
 							<string key="name">image</string>
 							<string key="candidateClassName">UIImageView</string>
@@ -190,6 +281,11 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="cellBackground.png">{264, 39}</string>
+			<string key="cellCheckmark.png">{20, 19}</string>
+			<string key="cellDots.png">{264, 4}</string>
+		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
