--- a/ToothFairy/en.lproj/MainStoryboard.storyboard
+++ b/ToothFairy/en.lproj/MainStoryboard.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="83" y="468" width="155" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="buttonStart.png" backgroundImage="buttonStart.png">
+                                <state key="normal" backgroundImage="buttonStart.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -29,7 +29,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="2" kind="push" id="w1c-md-Fng"/>
+                                    <segue destination="2" kind="push" id="K5h-F6-swW"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -43,10 +43,10 @@
             </objects>
             <point key="canvasLocation" x="-101" y="-345"/>
         </scene>
-        <!--Gender View Controller - GENDER-->
+        <!--Gender View Controller2-->
         <scene sceneID="5">
             <objects>
-                <viewController title="GENDER" id="2" customClass="TFGenderViewController" sceneMemberID="viewController">
+                <viewController id="2" customClass="TFGenderViewController2" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -57,36 +57,82 @@
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jN6-4V-duT">
                                 <rect key="frame" x="20" y="30" width="280" height="78"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Baskerville-SemiBold" family="Baskerville" pointSize="35"/>
                                 <color key="textColor" red="0.31764706969261169" green="0.37647062540054321" blue="0.60000002384185791" alpha="1" colorSpace="deviceRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Xkw-fq-oWx">
-                                <rect key="frame" x="20" y="150" width="280" height="252"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="tableTop.png" id="Aou-LB-1eV">
+                                <rect key="frame" x="28.5" y="144.5" width="263" height="8"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                            </imageView>
+                            <containerView contentMode="scaleToFill" id="rCc-e4-sfR">
+                                <rect key="frame" x="28" y="152" width="263.5" height="224"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="2" id="OxB-V7-z3R"/>
-                                    <outlet property="delegate" destination="2" id="Syr-3B-h6r"/>
+                                    <segue destination="oLo-Vr-3gs" kind="embed" id="eCz-3M-vRU"/>
                                 </connections>
-                            </tableView>
+                            </containerView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="tableBottom.png" id="TMs-Nq-Jx7">
+                                <rect key="frame" x="27" y="229" width="264" height="8"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="step1Of7.png" id="JMK-JK-7XH">
+                                <rect key="frame" x="114" y="446" width="92" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="0Y5-3u-krD"/>
+                    <navigationItem key="navigationItem" id="0Y5-3u-krD">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="S85-Th-84G">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Bts-Bk-mOf">
+                                <rect key="frame" x="286" y="7" width="29" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="buttonFairyBarButton.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="mainTitle" destination="jN6-4V-duT" id="7x1-V1-GIX"/>
-                        <outlet property="table" destination="Xkw-fq-oWx" id="16Y-Ut-mM9"/>
-                        <outlet property="view" destination="Xkw-fq-oWx" id="14s-bT-3EL"/>
+                        <outlet property="mainTitle" destination="jN6-4V-duT" id="mWO-E0-nwl"/>
                         <segue destination="peP-mr-m4r" kind="push" identifier="educationViewController" id="ruG-bH-eV4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="356" y="-351"/>
+            <point key="canvasLocation" x="337" y="-521"/>
+        </scene>
+        <!--Gender View Controller2-->
+        <scene sceneID="hyy-0a-MUK">
+            <objects>
+                <viewController id="oLo-Vr-3gs" customClass="TFGenderViewController2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleAspectFit" id="eL5-XS-Ypv">
+                        <rect key="frame" x="0.0" y="0.0" width="263.5" height="224"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="39" sectionHeaderHeight="22" sectionFooterHeight="22" id="1vZ-UH-8V2">
+                                <rect key="frame" x="-1" y="0.0" width="264" height="224"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                    </view>
+                    <connections>
+                        <outlet property="table" destination="1vZ-UH-8V2" id="N7p-g1-cSo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Htr-Bl-eU2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="792" y="-746"/>
         </scene>
         <!--Education View Controller - EDUCATION-->
         <scene sceneID="Mlo-AI-bRF">
@@ -190,10 +236,10 @@
             </objects>
             <point key="canvasLocation" x="1381" y="27"/>
         </scene>
-        <!--Navigation Controller - Tooth Fairy-->
+        <!--Navigation Controller-->
         <scene sceneID="ZdN-69-82M">
             <objects>
-                <navigationController title="Tooth Fairy" id="3vP-Hd-UgM" sceneMemberID="viewController">
+                <navigationController id="3vP-Hd-UgM" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="wTx-HY-LmI">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -221,10 +267,10 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="z8U-SP-u20">
-                                <rect key="frame" x="83" y="467.5" width="155" height="46"/>
+                                <rect key="frame" x="83" y="467" width="155" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="buttonNext.png" backgroundImage="buttonNext.png">
+                                <state key="normal" backgroundImage="buttonNext.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -249,12 +295,16 @@
     </scenes>
     <resources>
         <image name="backgroundInterior.png" width="320" height="396"/>
+        <image name="buttonFairyBarButton.png" width="58" height="58"/>
         <image name="buttonNext.png" width="156" height="45"/>
         <image name="buttonStart.png" width="155" height="45"/>
         <image name="disclaimerBackgroundpng.png" width="320" height="480"/>
         <image name="downArrow.png" width="33" height="30"/>
         <image name="startButtonPressed.png" width="16" height="16"/>
         <image name="startViewBackgroundComposed.png" width="320" height="568"/>
+        <image name="step1Of7.png" width="92" height="31"/>
+        <image name="tableBottom.png" width="264" height="6"/>
+        <image name="tableTop.png" width="264" height="8"/>
     </resources>
     <classes>
         <class className="TFAgeViewController" superclassName="TFBaseViewController">
@@ -273,10 +323,9 @@
         <class className="TFEducationViewController" superclassName="TFBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TFEducationViewController.h"/>
         </class>
-        <class className="TFGenderViewController" superclassName="TFBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFGenderViewController.h"/>
+        <class className="TFGenderViewController2" superclassName="TFBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFGenderViewController2.h"/>
             <relationships>
-                <relationship kind="outlet" name="mainTitle" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="table" candidateClass="UITableView"/>
             </relationships>
         </class>
