--- a/ToothFairy/en.lproj/MainStoryboard.storyboard
+++ b/ToothFairy/en.lproj/MainStoryboard.storyboard
@@ -290,14 +290,10 @@
         <scene sceneID="86n-8i-ifs">
             <objects>
                 <viewController id="jFc-5b-bi7" customClass="TFDisclaimerViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="NBT-1V-FaW">
+                    <view key="view" contentMode="scaleAspectFit" id="NBT-1V-FaW">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="disclaimerBackgroundpng.png" id="3ea-9l-X27">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="z8U-SP-u20">
                                 <rect key="frame" x="83" y="482" width="155" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
@@ -312,6 +308,30 @@
                                 <connections>
                                     <action selector="click:" destination="jFc-5b-bi7" eventType="touchUpInside" id="BUD-An-a1I"/>
                                     <segue destination="aJs-WA-bp8" kind="push" id="me8-yJ-62I"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="backgroundHeavens.png" id="ZD4-UR-y3n">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="disclaimer.png" id="l3K-H3-C0Z">
+                                <rect key="frame" x="31" y="91" width="258" height="183"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Mcv-bD-JLY">
+                                <rect key="frame" x="82" y="483" width="156" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" backgroundImage="buttonNext.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="click:" destination="jFc-5b-bi7" eventType="touchUpInside" id="syx-q1-DIb"/>
+                                    <segue destination="aJs-WA-bp8" kind="push" id="ba3-Ft-gD5"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -807,8 +827,8 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="starMedium.png" id="cHd-wa-L2s">
-                                <rect key="frame" x="81" y="248" width="24" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <rect key="frame" x="81" y="257" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="phI-8f-HO9">
                                 <rect key="frame" x="40" y="391" width="241" height="44"/>
@@ -849,12 +869,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="animationDisclaimer.png" id="7LV-gc-Sdl">
-                                <rect key="frame" x="51" y="291" width="219" height="96"/>
+                                <rect key="frame" x="51" y="316" width="219" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="toothFairyWording.png" id="Y4s-G8-WCL">
-                                <rect key="frame" x="46" y="301" width="228" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                                <rect key="frame" x="46" y="291" width="228" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="fairyNoSmile.png" id="YHI-DQ-FpF">
                                 <rect key="frame" x="140" y="150" width="40" height="27"/>
@@ -949,7 +969,7 @@
         <image name="buttonShare.png" width="105" height="31"/>
         <image name="buttonStart.png" width="155" height="45"/>
         <image name="buttonWhyThisAmount.png" width="241" height="44"/>
-        <image name="disclaimerBackgroundpng.png" width="320" height="480"/>
+        <image name="disclaimer.png" width="258" height="183"/>
         <image name="downArrow.png" width="33" height="30"/>
         <image name="fairy.png" width="262" height="176"/>
         <image name="fairyNoSmile.png" width="262" height="176"/>
@@ -1089,6 +1109,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="nCk-AV-qmy"/>
+        <segue reference="me8-yJ-62I"/>
     </inferredMetricsTieBreakers>
 </document>
